# tfm-uoc-crawling-system

./: .dockerignore  README.rst  crawling-storage-cache.json  custom-flex-app.yaml.yamltemplate  manage.py  requirements.base.txt  requirements.txt.template  requirements_docs.txt  requirements_test.base.txt  setup.cfg  setup.py
environment/dev-local/: Dockerfile
src/financial_reports/: Petrobras_9512_20180930.xlsx  Portobelo_13773_20180930.xlsx
src/notebooks/: Alpha Factor_2_CapEx_Vol_6Q.ipynb  B_matrix_factor_exposures.csv  Brazil_10year_bond_yield_historical_data.csv  F_matrix_factors_covariance_matrix.csv  Finantial Statements.ipynb  Historic Stock Prices.ipynb  Risk Model - FF Factors and Exposures.ipynb  Risk Model - Portfolio Variance.ipynb  S_matrix_idiosynchratic_variances.csv  Trading Calendars.ipynb  Universe Selection.ipynb  capex_vol_6q_factor.csv  companies.py  db.py  factor_exposures.csv  financials.py  ibov_prices.csv  json_utils.py  spark.py  ticker_details.csv  ticker_events.csv  tickers.csv
src/tfm_uoc_crawling_system/: __init__.py  apps.py  exceptions.py  gunicorn.conf.py  settings.py  urls.py  wsgi.py
